--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,30 @@
 spring.application.name=api-transporte
+server.port=8080
+
+jwt.public.key=classpath:app.pub
+jwt.private.key=classpath:app.key
+
+spring.datasource.url=jdbc:mysql://localhost:3305/db_transporte?createDatabaseIfNotExist=true&useSSl=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
+#com essa tag não aparece a stake de erros
+server.error.include-stacktrace=never
+
+#logging.level.org.springframework.security: DEBUG
+
+logging.level.org.springframework.beans.factory.support.DefaultListableBeanFactory=DEBUG
+spring.main.allow-circular-references=false
+
+#spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
+
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.jpa.hibernate.ddl-auto=none
