--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
 		<version>3.4.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
+	
+
 	<groupId>com.otymus</groupId>
 	<artifactId>api-transporte</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -28,7 +31,11 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
+
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -117,6 +124,13 @@
 				</configuration>
 			</plugin>
 		</plugins>
+
+		<resources>
+			<resource>
+			<directory>src/main/resources</directory>
+			<filtering>false</filtering>
+			</resource>
+		</resources>
 	</build>
 
 </project>
